changes relative paths to absolute path with alias @

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,6 @@
             "icon": "issue-opened",
             "foreground": "red",
         }
-    }
+    },
+    "javascript.preferences.importModuleSpecifier": "non-relative"
 }
