--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-image": "^2.4.0",
     "react-rating": "^2.0.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
