--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,16 @@
 # production
 /build
 
+# netlify
+/.netlify
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.netlify
 
 npm-debug.log*
 yarn-debug.log*
